--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -1,5 +1,45 @@
 <% include ../partials/header.html %>
 
-This is the index
+<div class="container">
+  <div class="hero is-dark is-medium hero-background fade-in">
+    <div class="hero-body">
+      <h1 class="title">Facultad de Telem&aacute;tica</h1>
+      <p class="subtitle">Formamos recursos humanos de Licenciatura y Posgrado eficientes y competitivos, socialmente comprometidos, capaces de innovar y adaptarse en el &aacute;rea de las Tecnolog&iacute;s de la Informaci&oacute;n y Comunicaci&oacute;n (TIC) en los entornos nacional e internacional.</p>
+    </div>
+  </div>
+</div>
+
+<div class="section">
+  <div class="container fade-in">
+    <h1 class="title">Estudia con nosotros</h1>
+
+    <div class="tabs is-fullwidth is-centered">
+      <ul>
+        <li class="anchor-tab is-active" id="tab-internet-technology-bachelors">
+          <a>
+            <span class="icon is-small"><i class="fas fa-wifi" aria-hidden="true"></i></span>
+            <span>Ingenier&iacute;a en Tecnolog&iacute;s de Internet</span>
+          </a>
+        </li>
+        <li class="anchor-tab" id="tab-software-bachelors">
+          <a>
+            <span class="icon is-small"><i class="fas fa-keyboard" aria-hidden="true"></i></span>
+            <span>Ingenier&iacute;a en Software</span>
+          </a>
+        </li>
+        <li class="anchor-tab" id="tab-internet-technology-masters">
+          <a>
+            <span class="icon is-small"><i class="fas fa-wifi" aria-hidden="true"></i></span>
+            <span>Maestr&iacute;a en Tecnolog&iacute;s de Internet</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="content-tab" id="content-internet-technology-bachelors">Internet Technology Bachelors</div>
+    <div class="content-tab is-hidden" id="content-software-bachelors">Software bachelors</div>
+    <div class="content-tab is-hidden" id="content-internet-technology-masters">Masters</div>
+  </div>
+</div>
 
 <% include ../partials/footer.html %>
