Update font family

--- a/public/stylesheets/custom-styles.css
+++ b/public/stylesheets/custom-styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Barlow', sans-serif;
+}
+
 .hero-background {
     background-image: url("/assets/images/telematica.jpg");
     background-position: center center;
