--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -12,25 +12,26 @@
 <div class="section">
   <div class="container fade-in">
     <h1 class="title">Estudia con nosotros</h1>
+    <p class="subtitle">En la Facultad de Telem&aacute;tica nos damos a la tarea de egresar profesionistas capacitados para aprovechar las oportunidades que se pueden obtener con la aplicaci&oacute;n de los conocimientos apoyados con tecnolog&iacute;a.</p>
 
     <div class="tabs is-fullwidth is-centered">
       <ul>
         <li class="anchor-tab is-active" id="tab-internet-technology-bachelors">
           <a>
             <span class="icon is-small"><i class="fas fa-wifi" aria-hidden="true"></i></span>
-            <span>Ingenier&iacute;a en Tecnolog&iacute;s de Internet</span>
+            <span>Ingenier&iacute;a en Tecnolog&iacute;as de Internet</span>
           </a>
         </li>
         <li class="anchor-tab" id="tab-software-bachelors">
           <a>
             <span class="icon is-small"><i class="fas fa-keyboard" aria-hidden="true"></i></span>
-            <span>Ingenier&iacute;a en Software</span>
+            <span>Ingenier&iacute;a de Software</span>
           </a>
         </li>
         <li class="anchor-tab" id="tab-internet-technology-masters">
           <a>
             <span class="icon is-small"><i class="fas fa-wifi" aria-hidden="true"></i></span>
-            <span>Maestr&iacute;a en Tecnolog&iacute;s de Internet</span>
+            <span>Maestr&iacute;a en Tecnolog&iacute;as de Internet</span>
           </a>
         </li>
       </ul>
