Add youtube video modals and programs description

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -37,10 +37,66 @@
       </ul>
     </div>
 
-    <div class="content-tab" id="content-internet-technology-bachelors">Internet Technology Bachelors</div>
-    <div class="content-tab is-hidden" id="content-software-bachelors">Software bachelors</div>
-    <div class="content-tab is-hidden" id="content-internet-technology-masters">Masters</div>
-  </div>
+    <div class="content-tab fade-in" id="content-internet-technology-bachelors">
+      <div class="columns is-desktop is-vcentered is-variable is-8">
+        <div class="column is-one-third is-relative">
+          <figure class="image">
+            <img src="https://img.youtube.com/vi/a4NCcf7mTgg/0.jpg" alt="TI">
+          </figure>
+          <a class="modal-button" data-target="https://www.youtube.com/embed/a4NCcf7mTgg">
+            <span class="icon is-large has-text-white is-absolute is-play-icon"><i class="far fa-4x fa-play-circle"></i></span>
+          </a>
+        </div>
+        <div class="column">
+          <p class="is-size-4">Profesionales capaces de proponer soluciones basadas en tecnolog&iacute;as disruptivas de Internet para utilizar de forma &oacute;ptima los datos que permitan a las organizaciones mejorar su productividad y la creaci&oacute;n de nuevos productos, procesos y/o servicios.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="content-tab fade-in is-hidden" id="content-software-bachelors">
+      <div class="columns is-desktop is-vcentered is-variable is-8">
+        <div class="column is-one-third is-relative">
+          <figure class="image">
+            <img src="https://img.youtube.com/vi/wj7aGmiwm3U/0.jpg" alt="TI">
+          </figure>
+          <a class="modal-button" data-target="https://www.youtube.com/embed/wj7aGmiwm3U">
+            <span class="icon is-large has-text-white is-absolute is-play-icon"><i class="far fa-4x fa-play-circle"></i></span>
+          </a>
+        </div>
+        <div class="column">
+          <p class="is-size-4">El Ingeniero de Software posee competencias para dise&ntilde;ar la arquitectura y detallar las especificaciones de funcionamiento de los sistemas de software en organizaciones nacionales e internacionales, conoce la naturaleza y propiedades de los distintos lenguajes de programaci&oacute;n, realiza la implementaci&oacute;n del software mediante el uso de las diferentes metodolog&iacute;as y paradigmas del ciclo de vida y, realiza los distintos tipos de mantenimiento en sistemas de software.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="content-tab fade-in is-hidden" id="content-internet-technology-masters">
+      <div class="columns is-desktop is-vcentered is-variable is-8">
+        <div class="column is-one-third is-relative">
+          <figure class="image">
+            <img src="https://img.youtube.com/vi/23d_z0WsC6c/0.jpg" alt="TI">
+          </figure>
+          <a class="modal-button" data-target="https://www.youtube.com/embed/23d_z0WsC6c">
+            <span class="icon is-large has-text-white is-absolute is-play-icon"><i class="far fa-4x fa-play-circle"></i></span>
+          </a>
+        </div>
+        <div class="column">
+          <p class="is-size-4">Formar profesionales con competencias para analizar, desarrollar, implementar y administrar tecnolog&iacute;as de Internet con el fin de resolver necesidades y problem&aacute;ticas en diversos entornos de aplicaci&oacute;n, a trav&eacute;s de las metodolog&iacute;as de aprendizaje basado en proyectos, casos y problemas, vinculados con empresas, instituciones de educaci&oacute;n superior y centros de investigaci&oacute;n nacionales e internacionales.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal">
+      <div class="modal-background">
+      </div>
+      <div class="modal-content is-relative">
+        <div class="box video-container">
+          <iframe class="youtube-video" width="100%" height="450" src="" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+       <button class="modal-close is-large"></button>
+    </div>
+
+ </div>
 </div>
 
 <% include ../partials/footer.html %>
