--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="/assets/javascript/content-load.js"></script>
+    <script defer src="/assets/javascript/modals.js"></script>
   </head>
   <body>
 
