--- a/public/stylesheets/custom-styles.css
+++ b/public/stylesheets/custom-styles.css
@@ -18,6 +18,37 @@
   animation: fadein 1.6s;
 }
 
+.is-relative {
+    position: relative;
+}
+
+.is-absolute {
+    position: absolute;
+}
+
+.is-play-icon {
+    top: 50%;
+    left: 50%;
+    margin-top: -20px;
+    margin-left: -20px;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 50%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
